// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`social-media/posts/linkedin PublishPost post with a link works 1`] = `
Ok {
  "value": Object {
    "postId": "urn:li:share:6920392040602091520",
    "url": "https://www.linkedin.com/feed/update/urn:li:activity:6920392041046704129",
  },
}
`;

exports[`social-media/posts/linkedin PublishPost post with images keeps the link if media is present 1`] = `
Ok {
  "value": Object {
    "postId": "urn:li:share:6920392081903415296",
    "url": "https://www.linkedin.com/feed/update/urn:li:activity:6920392082507403264",
  },
}
`;

exports[`social-media/posts/linkedin PublishPost post with images uploads and posts media 1`] = `
Ok {
  "value": Object {
    "postId": "urn:li:share:6920392067227541505",
    "url": "https://www.linkedin.com/feed/update/urn:li:activity:6920392067865071616",
  },
}
`;

exports[`social-media/posts/linkedin PublishPost text-only post works 1`] = `
Ok {
  "value": Object {
    "postId": "urn:li:share:6920392037481541632",
    "url": "https://www.linkedin.com/feed/update/urn:li:activity:6920392037846437888",
  },
}
`;

exports[`social-media/publish-post/linkedin PublishPost error cases invalid profileId ends in not found error 1`] = `
Err {
  "error": "HTTPError: Expected HTTP error
Properties: {
  \\"title\\": \\"Forbidden\\",
  \\"detail\\": \\"Field Value validation failed in REQUEST_BODY: Data Processing Exception while processing fields [/owner]\\",
  \\"original\\": {
    \\"serviceErrorCode\\": 100,
    \\"message\\": \\"Field Value validation failed in REQUEST_BODY: Data Processing Exception while processing fields [/owner]\\",
    \\"status\\": 403
  }
}
AST Path: definitions[0].statements[3].responseHandlers[1].statements[1]
Original Map Location: Line 60, column 7",
}
`;
